[gd_scene load_steps=7 format=3 uid="uid://cepxqv8x2n7fy"]

[ext_resource type="Script" path="res://scenes/ui/settings/enhanced_settings_menu.gd" id="1_enhanced"]
[ext_resource type="Texture2D" uid="uid://br7ixb8r6k7qn" path="res://assets/ui/fantasy/RectangleBox_96x96.png" id="2_panel"]
[ext_resource type="Texture2D" uid="uid://dxqvh3x8jl7qn" path="res://assets/ui/fantasy/TitleBox_64x16.png" id="3_title"]
[ext_resource type="Texture2D" uid="uid://b8qvh3x8jl7qn" path="res://assets/ui/fantasy/Button_52x14.png" id="4_button"]
[ext_resource type="Texture2D" uid="uid://a8qvh3x8jl7qn" path="res://assets/ui/fantasy/QuitIcon.png" id="5_quit"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1"]
texture = ExtResource("2_panel")
texture_margin_left = 20.0
texture_margin_right = 20.0
texture_margin_top = 20.0
texture_margin_bottom = 20.0

[node name="EnhancedSettingsMenu" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
z_index = 1000
script = ExtResource("1_enhanced")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.85)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxTexture_1")

[node name="TitleBar" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = 55.0

[node name="TitleLabel" type="Label" parent="Panel/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Game Settings"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="CloseButton" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = 50.0
texture_normal = ExtResource("5_quit")
stretch_mode = 3

[node name="TabContainer" type="TabContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 65.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Audio" type="ScrollContainer" parent="Panel/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Audio"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="AudioTitle" type="Label" parent="Panel/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
text = "Audio Settings"
theme_override_font_sizes/font_size = 20

[node name="HSeparator" type="HSeparator" parent="Panel/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="MasterVolume" type="VBoxContainer" parent="Panel/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/TabContainer/Audio/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Master Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TabContainer/Audio/VBoxContainer/MasterVolume"]
layout_mode = 2

[node name="DecreaseButton" type="Button" parent="Panel/TabContainer/Audio/VBoxContainer/MasterVolume/HBoxContainer"]
layout_mode = 2
text = "-"
custom_minimum_size = Vector2(40, 40)

[node name="VolumeSlider" type="HSlider" parent="Panel/TabContainer/Audio/VBoxContainer/MasterVolume/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.7

[node name="IncreaseButton" type="Button" parent="Panel/TabContainer/Audio/VBoxContainer/MasterVolume/HBoxContainer"]
layout_mode = 2
text = "+"
custom_minimum_size = Vector2(40, 40)

[node name="VolumeLabel" type="Label" parent="Panel/TabContainer/Audio/VBoxContainer/MasterVolume/HBoxContainer"]
layout_mode = 2
text = "70%"
custom_minimum_size = Vector2(50, 0)

[node name="MusicVolume" type="VBoxContainer" parent="Panel/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/TabContainer/Audio/VBoxContainer/MusicVolume"]
layout_mode = 2
text = "Music Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TabContainer/Audio/VBoxContainer/MusicVolume"]
layout_mode = 2

[node name="DecreaseButton" type="Button" parent="Panel/TabContainer/Audio/VBoxContainer/MusicVolume/HBoxContainer"]
layout_mode = 2
text = "-"
custom_minimum_size = Vector2(40, 40)

[node name="VolumeSlider" type="HSlider" parent="Panel/TabContainer/Audio/VBoxContainer/MusicVolume/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.7

[node name="IncreaseButton" type="Button" parent="Panel/TabContainer/Audio/VBoxContainer/MusicVolume/HBoxContainer"]
layout_mode = 2
text = "+"
custom_minimum_size = Vector2(40, 40)

[node name="VolumeLabel" type="Label" parent="Panel/TabContainer/Audio/VBoxContainer/MusicVolume/HBoxContainer"]
layout_mode = 2
text = "70%"
custom_minimum_size = Vector2(50, 0)

[node name="SFXVolume" type="VBoxContainer" parent="Panel/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/TabContainer/Audio/VBoxContainer/SFXVolume"]
layout_mode = 2
text = "Sound Effects Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TabContainer/Audio/VBoxContainer/SFXVolume"]
layout_mode = 2

[node name="DecreaseButton" type="Button" parent="Panel/TabContainer/Audio/VBoxContainer/SFXVolume/HBoxContainer"]
layout_mode = 2
text = "-"
custom_minimum_size = Vector2(40, 40)

[node name="VolumeSlider" type="HSlider" parent="Panel/TabContainer/Audio/VBoxContainer/SFXVolume/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.7

[node name="IncreaseButton" type="Button" parent="Panel/TabContainer/Audio/VBoxContainer/SFXVolume/HBoxContainer"]
layout_mode = 2
text = "+"
custom_minimum_size = Vector2(40, 40)

[node name="VolumeLabel" type="Label" parent="Panel/TabContainer/Audio/VBoxContainer/SFXVolume/HBoxContainer"]
layout_mode = 2
text = "70%"
custom_minimum_size = Vector2(50, 0)

[node name="Game" type="ScrollContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Game"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="GameTitle" type="Label" parent="Panel/TabContainer/Game/VBoxContainer"]
layout_mode = 2
text = "Game Settings"
theme_override_font_sizes/font_size = 20

[node name="HSeparator" type="HSeparator" parent="Panel/TabContainer/Game/VBoxContainer"]
layout_mode = 2

[node name="SaveLoadSection" type="VBoxContainer" parent="Panel/TabContainer/Game/VBoxContainer"]
layout_mode = 2

[node name="SaveLoadLabel" type="Label" parent="Panel/TabContainer/Game/VBoxContainer/SaveLoadSection"]
layout_mode = 2
text = "Save & Load"

[node name="SaveButton" type="Button" parent="Panel/TabContainer/Game/VBoxContainer/SaveLoadSection"]
layout_mode = 2
text = "Save Game"
custom_minimum_size = Vector2(0, 40)

[node name="LoadButton" type="Button" parent="Panel/TabContainer/Game/VBoxContainer/SaveLoadSection"]
layout_mode = 2
text = "Load Game"
custom_minimum_size = Vector2(0, 40)

[node name="HSeparator2" type="HSeparator" parent="Panel/TabContainer/Game/VBoxContainer"]
layout_mode = 2

[node name="DataSection" type="VBoxContainer" parent="Panel/TabContainer/Game/VBoxContainer"]
layout_mode = 2

[node name="DataLabel" type="Label" parent="Panel/TabContainer/Game/VBoxContainer/DataSection"]
layout_mode = 2
text = "Data Management"

[node name="BackupButton" type="Button" parent="Panel/TabContainer/Game/VBoxContainer/DataSection"]
layout_mode = 2
text = "Backup Save Data"
custom_minimum_size = Vector2(0, 40)

[node name="RestoreButton" type="Button" parent="Panel/TabContainer/Game/VBoxContainer/DataSection"]
layout_mode = 2
text = "Restore from Backup"
custom_minimum_size = Vector2(0, 40)

[node name="ClearDataButton" type="Button" parent="Panel/TabContainer/Game/VBoxContainer/DataSection"]
layout_mode = 2
text = "Clear All Data"
custom_minimum_size = Vector2(0, 40)
modulate = Color(1, 0.5, 0.5, 1)

[node name="Display" type="ScrollContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Display"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="DisplayTitle" type="Label" parent="Panel/TabContainer/Display/VBoxContainer"]
layout_mode = 2
text = "Display Settings"
theme_override_font_sizes/font_size = 20

[node name="HSeparator" type="HSeparator" parent="Panel/TabContainer/Display/VBoxContainer"]
layout_mode = 2

[node name="FullscreenCheck" type="CheckBox" parent="Panel/TabContainer/Display/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="VSyncCheck" type="CheckBox" parent="Panel/TabContainer/Display/VBoxContainer"]
layout_mode = 2
text = "VSync"